--- a/core/css/screen.css
+++ b/core/css/screen.css
@@ -2,11 +2,49 @@ body {
     background: #cccccc;
 }
 
+div.pico-content {
+    box-shadow: 0px 0px 50px #333333;
+    font-family: Ubuntu, sans-serif;
+}
+
 
 div.pico-content h1 {
     margin:0px;
-    padding:0px;
+    padding:4px 25px 4px 4px;
+    background: #333333;
+    color: #cccccc;
+    
+    font-size: 15px;
+    border-radius: 5px;
+    border-bottom-left-radius: 0px;
+    border-bottom-right-radius: 0px;
+    font-weight:100;
 }
+
+div.pico-content div.body {
+    margin:0px;
+    padding:10px 5px 10px 5px;
+    background: #eeeeee;
+    font-family: Ubuntu, sans-serif;
+}
+
+div.pico-content div.body label {
+    font-weight:bold;
+} 
+
+div.pico-content div.buttonTray {
+    padding:10px;
+    background: #999999;
+    box-shadow: inset 0px 4px 4px #777777;
+    border-radius: 5px;
+    border-top-left-radius: 0px;
+    border-top-right-radius: 0px;
+}
+
+div.pico-content div.buttonTray button {
+    width:100%;
+}
+
 
 .doctored_edit_toolbar {
 
