--- a/doctored/css/screen.css
+++ b/doctored/css/screen.css
@@ -1,69 +1,25 @@
-body {
-    background: #cccccc;
-}
-
-div.pico-content {
-    box-shadow: 0px 0px 50px #333333;
-    font-family: Ubuntu, sans-serif;
-}
-
-
-div.pico-content h1 {
-    margin:0px;
-    padding:4px 25px 4px 4px;
-    background: #333333;
-    color: #cccccc;
-    
-    font-size: 15px;
-    border-radius: 5px;
-    border-bottom-left-radius: 0px;
-    border-bottom-right-radius: 0px;
-    font-weight:100;
-}
-
-div.pico-content div.body {
-    margin:0px;
-    padding:10px 5px 10px 5px;
-    background: #eeeeee;
-    font-family: Ubuntu, sans-serif;
-}
-
-div.pico-content div.body label {
-    font-weight:bold;
-} 
-
-div.pico-content div.buttonTray {
-    padding:10px;
-    background: #999999;
-    box-shadow: inset 0px 4px 4px #777777;
-    border-radius: 5px;
-    border-top-left-radius: 0px;
-    border-top-right-radius: 0px;
-}
-
-div.pico-content div.buttonTray button {
-    width:100%;
-}
-
-
-.doctored_edit_toolbar {
-
-}
-
-.doctored_edit_toolbar .doctored_edit_toolbar_arrow {
-   width: 0; 
-   height: 0; 
-   border-bottom: 120px solid green; 
-   border-left: 60px solid transparent; 
-   border-right: 60px solid transparent; 
-}
-
 .doctored {
     font-family:Ubuntu,sans-serif;
-    padding: 0px;
+    padding:0px;
     margin:0px;
     outline:none;
 }
+
+    .doctored:before {
+        float:right;
+        text-align:right;
+        margin-right:30px;
+        width: 180px;
+        position:relative;
+        top:1.3em;
+        color: rgb(102, 102, 102);
+        text-shadow: 1px 1px 1px #999999;
+        font-size: 13px;
+        font-weight: bold;
+        transform: rotate(1deg);
+        font-family: 'Reenie Beanie', Arial, sans-serif;
+        content: "Validation messages\21B4";
+    }
 
     .doctored .block {
         position:relative;
@@ -72,20 +28,24 @@ div.pico-content div.buttonTray button {
         margin:0px 200px 0px 0px;
         padding:0.5em 0px 1em 2.5em;
         border-radius:0px;
-        box-shadow: inset 0 -8px 8px -8px rgba(200,200,200,1), 0px 5px 5px #666666;
+        box-shadow: inset 0px -8px 8px -8px rgba(200,200,200,1), 0px 5px 5px #666666;
         background: #fff;
         overflow:visible;
-        box-shadow: ;
+    }
+
+    .doctored .selection {
+        background: red;
     }
 
     .doctored .block .block {
         padding:0.5em 0px 1em 2.5em;
         margin-top: 0.5em;
         margin-right: 0px;
+        background: #111111;
         background: rgba(30,30,30,0.1);
         box-shadow: inset 0px 0px 5px rgba(255,255,255,1);
         border-bottom-right-radius: 0px;
-        border-top-left-radius: 10px
+        border-top-left-radius: 10
     }
 
     .doctored .block:first-child {
@@ -112,15 +72,15 @@ div.pico-content div.buttonTray button {
             white-space:nowrap;
             font-weight:bold;
             -webkit-transform-origin: 1 1;
-            -webkit-transform: rotate(90deg) translate(1em, 0px);
+            -webkit-transform: rotate(90deg) translate(1em, 0);
             -moz-transform-origin: 1 1;
-            -moz-transform: rotate(90deg) translate(1em, 0px);
+            -moz-transform: rotate(90deg) translate(1em, 0);
             -ms-transform-origin: 1 1;
-            -ms-transform: rotate(90deg) translate(1em, 0px);
+            -ms-transform: rotate(90deg) translate(1em, 0);
             -o-transform-origin: 1 1;
-            -o-transform: rotate(90deg) translate(1em, 0px);
+            -o-transform: rotate(90deg) translate(1em, 0);
             transform-origin: 1 1;
-            transform: rotate(90deg) translate(1em, 0px);
+            transform: rotate(90deg) translate(1em, 0);
             font-size:small;
             text-shadow:1px 1px 2px #dddddd;
             cursor: pointer;
@@ -130,12 +90,13 @@ div.pico-content div.buttonTray button {
         .doctored .block.hide_errors:before,
         .doctored .block.has_errors:before {
             content: attr(data-error);
+            -ms-transition:width 2s, height 2s, background-color 2s, -moz-transform 2s;
             -moz-transition:width 2s, height 2s, background-color 2s, -moz-transform 2s;
             -webkit-transition:width 2s, height 2s, background-color 2s, -webkit-transform 2s;
             -o-transition:width 2s, height 2s, background-color 2s, -o-transform 2s;
             transition:width 2s, height 2s, background-color 2s, transform 2s;
             position:absolute;
-            z-index:1000;
+            z-index:1000px;
             right:-200px;
             top:0px;
             width:160px;
@@ -171,7 +132,6 @@ div.pico-content div.buttonTray button {
             z-index:1;
         }
 
-
     .doctored .inline-block {
         position:relative;
         display:inline-block;
@@ -192,16 +152,16 @@ div.pico-content div.buttonTray button {
             content: attr(data-element);
             color:#666666;
             font-weight:bold;
-            -webkit-transform-origin: 0 100;
-            -webkit-transform: translate(0px, 0.5em);
-            -moz-transform-origin: 0 100;
-            -moz-transform: translate(0px, 0.5em);
-            -ms-transform-origin: 0 100 ;
-            -ms-transform: translate(0px, 0.5em);
-            -o-transform-origin: 0 100 ;
-            -o-transform: translate(0px, 0.5em);
-            transform-origin: 0 100;
-            transform: translate(0px, 0.8em);
+            -webkit-transform-origin: 0px 100px;
+            -webkit-transform: translate(0, 0.5em);
+            -moz-transform-origin: 0px 100px;
+            -moz-transform: translate(0, 0.5em);
+            -ms-transform-origin: 0px 100px ;
+            -ms-transform: translate(0, 0.5em);
+            -o-transform-origin: 0px 100px ;
+            -o-transform: translate(0, 0.5em);
+            transform-origin: 0px 100px;
+            transform: translate(0, 0.8em);
             font-size:small;
             text-shadow:1px 1px 2px #dddddd;
             cursor: pointer;
@@ -211,13 +171,3 @@ div.pico-content div.buttonTray button {
             border-bottom: solid 2px red;
         }
 
-
-#validation_result {
-    width:100%;
-    height:100px;
-}
-
-#xml,
-#validation_result {
-    display:none;
-    }
