--- a/doctored/css/screen.css
+++ b/doctored/css/screen.css
@@ -6,48 +6,23 @@
 }
 
     .doctored:before {
-        float:right;
-        text-align:right;
-        margin-right:10px;
-        padding: 3px 5px;
-        border-radius: 3px;
-        width: 160px;
+        margin-top:-1.7em;
+        right: 0px;
+        position:absolute;
+        width: 200px;
         text-align:center;
-        position:relative;
-        top:1em;
         color: #777;
         text-shadow: 1px 1px 1px #999999;
         font-size: 13px;
         font-family: 'Reenie Beanie', Arial, sans-serif;
+        font-style: italic;
         content: "Validating...";
     }
 
-    .doctored.valid:before {
-        float:right;
-        text-align:right;
-        margin-right:10px;
-        padding: 3px 5px;
-        border-radius: 3px;
-        width: 160px;
-        text-align:center;
-        position:relative;
-        top:1em;
-        color: white;
-        text-shadow: 1px 1px 1px #999999;
-        font-size: 13px;
-        font-weight: bold;
-        background: green;
-        font-family: 'Reenie Beanie', Arial, sans-serif;
-        content: "Valid document!";
-    }
-
     .doctored.invalid:before {
-        float:right;
         text-align:right;
         margin-right:30px;
         width: 160px;
-        position:relative;
-        top:-1.5em;
         color: #777;
         background-color: none;
         text-shadow: 1px 1px 1px #999999;
@@ -58,34 +33,40 @@
         content: "Validation messages\21B4";
     }
 
-    .doctored.invalid:after {
-        content: " ";
-        clear:both;
+    .doctored.valid:before {
+        padding: 2px;
+        border-radius: 3px;
+        width: 160px;
+        margin-right:23px;
+        text-align:center;
+        color: white;
+        text-shadow: 1px 1px 1px #999999;
+        font-size: 13px;
+        font-weight: bold;
+        background: #6b6;
+        font-family: 'Reenie Beanie', Arial, sans-serif;
+        content: "Valid document!";
     }
 
     .doctored .block {
         position:relative;
-        /*clear:both;*/
         display:block;
-        margin:0px 200px 0px 0px;
-        padding:0.5em 0px 1em 2.5em;
+        margin:0px;
+        padding:0.5em 200px 1em 2.5em;
         border-radius:0px;
-        box-shadow: inset 0px -8px 8px -8px rgba(200,200,200,1), 0px 5px 5px #666666;
+        box-shadow: inset 0px -8px 8px -8px #c8c8c8, 0px 5px 5px #666666;
         background: #fff;
-        overflow:visible;
-    }
-
-    .doctored .selection {
-        background: red;
+        overflow:hidden;
     }
 
     .doctored .block .block {
+        clear:left;
         padding:0.5em 0px 1em 2.5em;
-        margin-top: 0.5em;
+        margin-top: 0.2em;
         margin-right: 0px;
         background: #111111;
         background: rgba(30,30,30,0.1);
-        box-shadow: inset 0px 0px 5px rgba(255,255,255,1);
+        box-shadow: inset 0px 0px 5px #fff;
         border-bottom-right-radius: 0px;
         border-top-left-radius: 10
     }
@@ -105,16 +86,16 @@
             clear:both;
             position:absolute;
             display:inline-block;
-            left: -0.2em;
+            left: 2em;
             top: 0.5em;
             content: attr(data-element);
             color:#666666;
-            margin-right: -3em;
-            width:3em;
+            margin-right: 0em;
+            height:1.2em;
             white-space:nowrap;
             font-weight:bold;
-            -webkit-transform-origin: 1 1;
-            -webkit-transform: rotate(90deg) translate(1em, 0);
+            -webkit-transform-origin: 0 0;
+            -webkit-transform: rotate(90deg);
             -moz-transform-origin: 1 1;
             -moz-transform: rotate(90deg) translate(1em, 0);
             -ms-transform-origin: 1 1;
@@ -126,37 +107,26 @@
             cursor: pointer;
         }
 
-        /*.doctored .block.hide_errors:before,*/
         .doctored .block.has_errors:before {
             content: attr(data-error);
-            -ms-transition:2s;
-            -moz-transition:2s;
-            -webkit-transition:2s;
-            transition:2s;
+            overflow:visible;
             position:absolute;
-            right:-200px;
-            top:0px;
-            width:160px;
-            font-size:small;
-            padding:10px;
+            margin-top: 0px;
+            right:5px;
+            top:4px;
+            width:172px;
+            font-size:x-small;
+            padding:4px 7px;
             background: red;
             border-radius:5px;
             border: solid 2px white;
             color: white;
             clear:both;
-            background-image:-webkit-linear-gradient( rgba(125, 125, 125, 0.5) 50%, 
-                rgba(95, 95, 95, 0.5) 50%, 
-                rgba(55, 55, 55, 0.5));
-            background-image:-moz-linear-gradient( rgba(125, 125, 125, 0.5) 50%, 
-                rgba(95, 95, 95, 0.5) 50%, 
-                rgba(55, 55, 55, 0.5));
-            -moz-box-shadow: 3px 3px 5px #888;
-            -webkit-box-shadow: 3px 3px 5px #888;
-            box-shadow: 3px 3px 5px #888;
-        }
-
-        .doctored .block.has_errors:before {
             opacity: 1;
+            background: #c44;
+            -moz-box-shadow: inset 1px 1px 3px #a22;
+            -webkit-box-shadow: inset 1px 1px 3px #a22;
+            box-shadow: inset 1px 1px 3px #a22;
         }
 
     .doctored .inline {
@@ -192,7 +162,7 @@
             cursor: pointer;
         }
 
-.doctored-menu {
+menu.doctored-menu {
     display: block;
     margin: 0px;
     padding: 0px;
@@ -212,11 +182,11 @@
     user-select: none;
 }
 
-    .doctored-menu:hover {
+    menu.doctored-menu:hover {
         opacity: 1;
     }
 
-    .doctored-menu a {
+    menu.doctored-menu a {
         display: inline-block;
         border: solid 1px white;
         padding:8px 13px;
@@ -234,7 +204,7 @@
         transition:0.3s;
     }
 
-    .doctored-menu a:hover {
+    menu.doctored-menu a:hover {
         -moz-box-shadow:inset 0px 0px 5px #bbbbbb;
         -webkit-box-shadow:inset 0px 0px 5px #bbbbbb;
         box-shadow:inset 0px 0px 5px #bbbbbb;
@@ -265,7 +235,7 @@
     outline: none;
 }
 
-.doctored-dialog {
+menu.doctored-dialog {
     position: absolute;
     z-index:1;
     background: #000000;
@@ -274,19 +244,19 @@
     display:none;
 }
 
-    .doctored-dialog select::before {
+    menu.doctored-dialog select::before {
         display: inline;
         content: "Choose element";
     }
 
-    .doctored-dialog select {
+    menu.doctored-dialog select {
         background: #000000;
         border: none;
         color: white;
         -webkit-appearance: none;
     }
 
-        .doctored-dialog select optgroup,
+        menu.doctored-dialog select optgroup,
         .doctored-dialog select option {
             background: black;
             color: white;
@@ -307,3 +277,8 @@
         border-left: 0px;
         border-right: 0px;
     }
+
+
+menu.doctored-properties {
+    display:none;
+}
